crates/citadel-client-ffi/include/citadel_client.h

/**
 * Status codes returned by the C ABI. Stable, `#[repr(C)]`.
 */
typedef enum {
    /**
     * Operation succeeded (and, for poll, an envelope was written).
     */
    CITADEL_STATUS_OK = 0,
    /**
     * Non-fatal: nothing was available to poll right now; try again later.
     */
    CITADEL_STATUS_AGAIN = 1,
    /**
     * The connection is closed; no more envelopes will arrive.
     */
    CITADEL_STATUS_DISCONNECTED = 2,
    /**
     * A pointer was null or an argument was invalid.
     */
    CITADEL_STATUS_INVALID_ARGUMENT = 3,
    /**
     * Connecting or handshaking failed.
     */
    CITADEL_STATUS_CONNECT = 4,
    /**
     * Sending failed.
     */
    CITADEL_STATUS_SEND = 5,
    /**
     * Receiving/decoding failed.
     */
    CITADEL_STATUS_RECEIVE = 6,
    /**
     * An unexpected internal error (including a caught panic).
     */
    CITADEL_STATUS_INTERNAL = 7,
} CitadelStatus;
/**
 * Opaque decoded DeltaBunch. Bytes are read with
 * [`citadel_rep_decoded_field_bytes`].
 */
typedef struct CitadelRepDecoded CitadelRepDecoded;
/**
 * Opaque DeltaBunch encoder handle exposed to C as `CitadelRepEncoder *`.
 */
typedef struct CitadelRepEncoder CitadelRepEncoder;
/**
 * Legacy v2 scalar decode descriptor. Its 40-byte layout is frozen because
 * `citadel_rep_decode` accepts caller-owned arrays of this exact type.
 */
typedef struct {
    uint8_t kind;
    int64_t int_min;
    int64_t int_max;
    float scalar_min;
    float scalar_max;
    uint32_t values_per_unit;
    uint32_t max_len;
} CitadelRepCodec;
/**
 * ABI-v3 typed codec descriptor. This is deliberately distinct from
 * [`CitadelRepCodec`]: vector/quaternion fields must never extend the legacy
 * descriptor consumed by `citadel_rep_decode`.
 */
typedef struct {
    uint8_t kind;
    int64_t int_min;
    int64_t int_max;
    float scalar_min;
    float scalar_max;
    uint32_t values_per_unit;
    uint32_t max_len;
    float vector_bounds;
    uint32_t quat_bits;
} CitadelRepCodecV3;
/**
 * One decoded scalar value. `kind` uses the same tags as [`CitadelRepCodec`].
 */
typedef struct {
    uint16_t field_id;
    uint8_t kind;
    bool bool_value;
    int64_t int_value;
    float scalar_value;
    uintptr_t bytes_len;
} CitadelRepFieldValue;
/**
 * One keyed collection operation. `op`: 0=remove, 1=add, 2=change.
 * Add/change `value_kind` must match the item codec kind. Bool uses a nonzero
 * `int_value`; scalar uses `floats[0]`; vector/quaternion use `floats`;
 * bytes use `bytes`/`bytes_len`. Input bytes are copied before return.
 */
typedef struct {
    uint8_t op;
    uint8_t value_kind;
    uint8_t _reserved[6];
    uint32_t rep_index;
    uint32_t rep_generation;
    uint64_t rep_key;
    int64_t int_value;
    float floats[4];
    const uint8_t *bytes;
    uintptr_t bytes_len;
} CitadelRepCollectionOp;
/**
 * Decode one authoritative DeltaBunch with the caller's ordered field codecs.
 * `schema_hash` is the canonical 16-byte identity for this ordered field table.
 *
 * # Safety
 * `body`, `schema_hash`, and `codecs` must point to their declared readable
 * ranges (or be null only for a zero length); `out_decoded` must be writable.
 */
CitadelStatus citadel_rep_decode(const uint8_t *body,
                                 uintptr_t body_len,
                                 const uint8_t *schema_hash,
                                 uint32_t layout_version,
                                 const CitadelRepCodec *codecs,
                                 uintptr_t codec_count,
                                 CitadelRepDecoded **out_decoded);
/**
 * # Safety
 * `decoded` must be a live decoded handle and every output pointer writable.
 */
CitadelStatus citadel_rep_decoded_header(const CitadelRepDecoded *decoded,
                                         uint32_t *out_object_id,
                                         bool *out_is_full,
                                         uint64_t *out_result_id,
                                         uint64_t *out_base_id);
/**
 * # Safety
 * `decoded` must be a live decoded handle or null.
 */
uintptr_t citadel_rep_decoded_field_count(const CitadelRepDecoded *decoded);
/**
 * # Safety
 * `decoded` must be live and `out` writable.
 */
CitadelStatus citadel_rep_decoded_field_at(const CitadelRepDecoded *decoded,
                                           uintptr_t index,
                                           CitadelRepFieldValue *out);
/**
 * # Safety
 * `decoded` must be null or an unfreed handle returned by `citadel_rep_decode`.
 */
void citadel_rep_decoded_free(CitadelRepDecoded *decoded);
/**
 * Create a DeltaBunch encoder. `is_full` selects a full snapshot (`base_id`
 * ignored, must set the schema via [`citadel_rep_encoder_set_schema`]);
 * otherwise `base_id` must be the nonzero base token. `result_id` must be
 * nonzero. `num_fields` is the class's field count (the changed_mask width).
 * Returns null on invalid arguments (zero `result_id`, or non-full with zero
 * `base_id`).
 */
CitadelRepEncoder *citadel_rep_encoder_new(uint32_t object_id,
                                           bool is_full,
                                           uint64_t result_id,
                                           uint64_t base_id,
                                           uintptr_t num_fields);
/**
 * Set the full-snapshot schema identity (the `hash` from [`citadel_schema_hash`]
 * and its `layout_version`). Required before finishing an `is_full` bunch.
 *
 * # Safety
 * `enc` must be a live encoder; `hash` must point to 16 readable bytes.
 */
CitadelStatus citadel_rep_encoder_set_schema(CitadelRepEncoder *enc,
                                             const uint8_t *hash,
                                             uint32_t layout_version);
/**
 * Add a boolean field to the bunch.
 *
 * # Safety
 * `enc` must be a live encoder handle.
 */
CitadelStatus citadel_rep_encoder_add_bool(CitadelRepEncoder *enc, uint16_t field_id, bool value);
/**
 * Add a bounded integer field (encoded in `ceil_log2(max-min+1)` bits).
 *
 * # Safety
 * `enc` must be a live encoder handle.
 */
CitadelStatus citadel_rep_encoder_add_int(CitadelRepEncoder *enc,
                                          uint16_t field_id,
                                          int64_t min,
                                          int64_t max,
                                          int64_t value);
/**
 * Add a bounded fixed-point scalar field.
 *
 * # Safety
 * `enc` must be a live encoder handle.
 */
CitadelStatus citadel_rep_encoder_add_scalar(CitadelRepEncoder *enc,
                                             uint16_t field_id,
                                             float min,
                                             float max,
                                             uint32_t values_per_unit,
                                             float value);
/**
 * Add a length-delimited byte field (capped at `max_len`).
 *
 * # Safety
 * `enc` must be a live encoder handle; `data` must point to `len` readable bytes
 * (or be null iff `len == 0`).
 */
CitadelStatus citadel_rep_encoder_add_bytes(CitadelRepEncoder *enc,
                                            uint16_t field_id,
                                            uint32_t max_len,
                                            const uint8_t *data,
                                            uintptr_t len);
/**
 * Add a Vector3 `[x, y, z]` in Citadel world units. `bounds` is symmetric;
 * pass zero for the canonical protocol default. Inputs must be finite and are
 * validated by the shared encoder when finishing.
 *
 * # Safety
 * `enc` must be a live encoder handle; `value` must point to 3 readable floats.
 */
CitadelStatus citadel_rep_encoder_add_vector3(CitadelRepEncoder *enc,
                                              uint16_t field_id,
                                              float bounds,
                                              const float *value);
/**
 * Add a smallest-three quaternion `[x, y, z, w]`. Degenerate/non-finite input
 * follows the shared codec's canonical identity normalization.
 *
 * # Safety
 * `enc` must be a live encoder handle; `value` must point to 4 readable floats.
 */
CitadelStatus citadel_rep_encoder_add_quat(CitadelRepEncoder *enc,
                                           uint16_t field_id,
                                           uint32_t bits_per_component,
                                           const float *value);
/**
 * Add a keyed collection field using the shared NetworkPeer collection codec.
 * `op`: 0=remove, 1=add, 2=change. Add/change values use the kind described
 * by [`CitadelRepCollectionOp`]. All input is copied; no pointer is retained.
 * Invalid operation kinds, mismatched item codecs, duplicate ids, or caps make
 * the encoder fail as one transaction and `finish` emits no partial bunch.
 *
 * # Safety
 * `enc` must be live. `ops` must reference `op_count` readable operations (or
 * be null iff zero); bytes values must reference `bytes_len` readable bytes.
 */
CitadelStatus citadel_rep_encoder_add_collection(CitadelRepEncoder *enc,
                                                 uint16_t field_id,
                                                 CitadelRepCodecV3 item_codec,
                                                 uint32_t max_items,
                                                 const CitadelRepCollectionOp *ops,
                                                 uintptr_t op_count);
/**
 * Finish the bunch, encoding it into the caller's `buf` (capacity `cap`). Writes
 * the encoded length to `*out_len` and sets `*out_truncated` if it did not fit.
 * The encoder is NOT freed; call [`citadel_rep_encoder_free`] after. Returns
 * [`CitadelStatus::InvalidArgument`] if a prior `add_*`/`set_schema` failed or an
 * argument was invalid; [`CitadelStatus::Internal`] if encoding itself failed.
 *
 * # Safety
 * `enc` must be a live encoder handle. `out_len`/`out_truncated` must be writable;
 * `buf` must point to at least `cap` writable bytes (or be null iff `cap == 0`).
 */
CitadelStatus citadel_rep_encoder_finish(CitadelRepEncoder *enc,
                                         uint8_t *buf,
                                         uintptr_t cap,
                                         uintptr_t *out_len,
                                         bool *out_truncated);
/**
 * Free a DeltaBunch encoder. Passing null is a no-op.
 *
 * # Safety
 * `enc` must be a handle from [`citadel_rep_encoder_new`] not already freed, or
 * null.
 */
void citadel_rep_encoder_free(CitadelRepEncoder *enc);