clients/unity/Citadel/CitadelNative.cs


        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_decode(
            [In] byte[] body, UIntPtr bodyLen, [In] byte[] schemaHash, uint layoutVersion,
            [In] RepCodec[] codecs, UIntPtr codecCount, out IntPtr decoded);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_decoded_header(
            IntPtr decoded, out uint objectId, [MarshalAs(UnmanagedType.I1)] out bool isFull,
            out ulong resultId, out ulong baseId);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr citadel_rep_decoded_field_count(IntPtr decoded);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_decoded_field_at(IntPtr decoded, UIntPtr index, out RepFieldValue value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void citadel_rep_decoded_free(IntPtr decoded);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr citadel_rep_encoder_new(uint objectId,
            [MarshalAs(UnmanagedType.I1)] bool isFull, ulong resultId, ulong baseId, UIntPtr fieldCount);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_set_schema(IntPtr encoder, [In] byte[] hash, uint layoutVersion);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_bool(IntPtr encoder, ushort fieldId, [MarshalAs(UnmanagedType.I1)] bool value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_int(IntPtr encoder, ushort fieldId, long min, long max, long value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_scalar(IntPtr encoder, ushort fieldId, float min, float max, uint valuesPerUnit, float value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_bytes(IntPtr encoder, ushort fieldId, uint maxLen, [In] byte[] data, UIntPtr len);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_vector3(IntPtr encoder, ushort fieldId, float bounds, [In] float[] value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_quat(IntPtr encoder, ushort fieldId, uint bitsPerComponent, [In] float[] value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_add_collection(IntPtr encoder, ushort fieldId, RepCodec itemCodec, uint maxItems, [In] RepCollectionOp[] ops, UIntPtr opCount);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern CitadelStatus citadel_rep_encoder_finish(IntPtr encoder, [Out] byte[] output, UIntPtr capacity, out UIntPtr outputLength, [MarshalAs(UnmanagedType.I1)] out bool truncated);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void citadel_rep_encoder_free(IntPtr encoder);
    }
}
